--- a/css/mio.css
+++ b/css/mio.css
@@ -10,14 +10,75 @@
         
 }
 
+#footer {
+   // border-style: solid;
+    //border-width: 1px;
+    //text-align: center;
+    margin-top: -20px;
+    //margin-bottom: 3px;
+    //margin-right: 3px;
+    background-color: #BDBDBD;
+    height:50px;
+        
+}
+
+
+
+
+
+/*
 nav.navbar {
     color: blue
-    background-color: green;
+    background-color: #CC1414 !important;
     border:none
 }
+*/
 
 
 #cabecera {
   
   // background-color: green; 
 }
+
+/*
+.navbar{
+        color: darkgreen!important;
+        width: LaMedidaQueDeseas;
+}
+*/
+
+
+
+.navbar-default {
+    background-color: #BDBDBD !important;
+/*    border-color: #E7E7E7 !important;*/
+    border:none !important;   
+    text-decoration: none !important;
+    color: black!important;
+}
+
+.navbar-default .navbar-nav>li>a {
+    color: black;
+}
+/*controla al pasar raton por encima letras*/
+
+
+.navbar-default .navbar-nav > li > a:focus {
+    color: red;
+    background-color: azure;
+}
+
+
+/*CLASE MUY INTERESANTE PARA EL MENU */
+.navbar-default .navbar-nav > li > a:hover {
+    
+    color : red;
+    background-color: white;
+}
+
+
+
+
+
+
+
